创建2DSphere索引接口
